--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,14 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+html {
+  background-color: #000000;
+}
+
 body {
   cursor: default;
   user-select: none;
-  background-color: black;
+  background-color: #000000;
   margin: 0;
   display: flex;
   min-width: 320px;
